- [MINOR] Add MessageDigest to ICryptoFactory (#2423)
- [PATCH] Adding check for OS version for passkeys (#2419)
- [MINOR] Platform Specific Extra Query Parameters (#2426)
- [PATCH] Return API error and errorDescription in case of unexpected response (#2431)
- [MINOR] Support certificate with password (#2405)
- [MINOR] Classifying TimeoutException as timed_out (#2441)

Version 17.5.0
---------
- [MINOR] Update logic for matching requested claims for AT (#2401)
- [MINOR] Updating YubiKit and CredMan versions (#2417)

Version 17.4.0
---------
- [PATCH] Update nimbus-jose-jwt 9.37.3 and junit 4.13.2 (#2392)
- [MINOR] Update flow to get token for labapi to not require automationrunnerapp (#2376)
- [MINOR] Add field in BrokerInteractiveTokenCommandParameters for ATv2. (#2363)
- [PATCH] Safe logging of Kotlin data classes through ILoggable interface (#2384)
- [MINOR] Support for multiple access tokens for NativeAuth. (#2390)

Version 17.3.0
---------
- [PATCH] Return exception from first controller in SilentTokenCommand in case all controllers throw exceptions. (#2377)
- [PATCH] Fix mAuthorizationStrategy is null in LocalMsalController (due to #2352) (#2370)
- [MINOR] Move the getActiveBroker() invocation to background thread (#2352)
- [PATCH] Return status code in errorResponse when server response is not in expected Json format. (#2321)
- [MINOR] Added telemetry for cross cloud and MSA passthrough requests (#2367)

Version 17.2.1
---------
- [PATCH] Reduce the amount of setAccountVisibility() call. (#2355)

Version 17.2.0
---------
- [PATCH] Move SHOULD_USE_ACCOUNT_MANAGER_UNTIL_EPOCH_MILLISECONDS_KEY to BaseActiveBrokerCache (#2340)
- [PATCH] Add cache for ContentProviderStrategy.isSupportedByTargetedBroker() (#2338)
- [PATCH] isSupportedByTargetedBroker should only be invoked in bg thread (#2339)
- [PATCH] Handle repeated camera requests. (#2332)
- [MINOR] Clear active broker cache if the (cached) active broker app doesn't support ipc mechanism (#2331)