@@ -22,6 +22,8 @@
 // THE SOFTWARE.
 package com.microsoft.identity.common.java.logging;
 
+import java.util.UUID;
+
 import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
 
 public enum DiagnosticContext {
@@ -76,8 +78,8 @@ public enum DiagnosticContext {
     public String getThreadCorrelationId() {
         IRequestContext context = getRequestContext();
         String correlationId = context.get(DiagnosticContext.CORRELATION_ID);
-        if (correlationId == null) {
-            correlationId = UNSET;
+        if (correlationId == null || correlationId.equals("UNSET")) {
+            correlationId = UUID.randomUUID().toString();
         }
         return correlationId;
     }
