@@ -15,6 +15,7 @@ Version 17.6.1
 - [PATCH] Return API error and errorDescription in case of unexpected response (#2431)
 - [MINOR] Support certificate with password (#2405)
 - [MINOR] Classifying TimeoutException as timed_out (#2441)
+- [PATCH] Add check for unset correlation ID when sending Native Auth requests (#2435)
 
 Version 17.5.0
 ---------
